--- a/Posts/Podfile
+++ b/Posts/Podfile
@@ -2,11 +2,12 @@
 # platform :ios, '9.0'
 
 target 'Posts' do
-
+use_frameworks!
   # Pods for Posts
   pod 'Alamofire', '5.0.0-beta.3'
   pod 'RxSwift', '~> 4.0'
   pod 'RxCocoa', '~> 4.0'
+  pod 'RealmSwift'
 
   target 'PostsTests' do
     inherit! :search_paths
